@@ -505,6 +505,21 @@ none is specified.
 
 =back
 
+=item V8
+
+This mode is still under development. Using it in packages will cause them
+to probably break later.
+
+Changes from V7 are:
+
+=over 8
+
+=item -
+
+Commands will fail rather than warning when they are passed unknown options.
+
+=back
+
 =back
 
 =head2 udebs
