@@ -289,8 +289,8 @@ init(options => {
 		"l" => \&list_addons,
 		"list" => \&list_addons,
 	},
-	# Disable complaints about unknown options; they are passed on the
-	# debhelper commands.
+	# Disable complaints about unknown options; they are passed on to 
+	# the debhelper commands.
 	ignore_unknown_options => 1,
 	# Bundling does not work well since there are unknown options.
 	bundling => 0,
