@@ -13,7 +13,6 @@ v8:
   (either change #3, change #4, or change #5; change #0 was done, but 
   was an incomplete workaround)
 * better package arch filtering for -N , -p (#576990)
-* Convert warning about unknown command-line options back to an error.
 * Support DEB_BUILD_OPTIONS=debug ; maybe also support passing
   -g -O2 by default. See patch (and discussion of why this breaks
   compatability) in #544844.
