@@ -5,6 +5,8 @@ debhelper (7.4.21) UNRELEASED; urgency=low
     target is not present in the same binary package, on advice of 
     Colin Watson. (To support eventual so search paths.)
   * Add deprecation warning for dh_clean -k.
+  * In v8 mode, do not allow directly passing unknown options to debhelper
+    commands. (Unknown options in DH_OPTIONS still only result in warnings.)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 May 2010 20:01:19 -0400
 
